--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Demonstrates the use of multi-touch APIs in Adobe AIR 2.
 
+Requires multi-touch enabled hardware.
+
 Written by Christian Cantrell.
